tests/run/error_global_annotation.out
tests/run/error_global_annotation.em:3:1: error: binding annotation does not match the value's type
